# nexium

./: .markdown-lint.yml  .prettierrc  .protolint.yaml  .protolintrc.yml  Cargo.toml  Dockerfile  README.md
.github/workflows/: deployment.yml  frontend-checks.yml  frontend-size.yml  linting.yml  rust-audit.yml  rust-style.yml
accounts/: Cargo.toml  accounts.proto  build.rs
accounts-http/: Cargo.toml  Dockerfile
accounts-http/src/: main.rs  routes.rs
accounts/src/: error.rs  lib.rs  main.rs  proto.rs  service.rs
backend/: .env  Cargo.toml  Dockerfile  README.md  build.rs  sqlx-data.json
backend/migrations/: 0001_accounts.sql  0001_initial.sql  0002_auth_password.sql  0003_session.sql
backend/src/: environment.rs  lib.rs  main.rs
backend/src/database/: mod.rs
backend/src/database/models/: account.rs  auth_password.rs  mod.rs  session.rs
backend/src/database/tables/: account.rs  auth_password.rs  mod.rs  session.rs
backend/src/http/: extractors.rs  frontend.rs  helpers.rs  mod.rs
backend/src/http/api/: health.rs  mod.rs
backend/src/http/api/account/: login.rs  logout.rs  mod.rs  new.rs  whoami.rs
backend/src/http/guards/: access.rs  mod.rs  refresh.rs  session.rs  session_unchecked.rs
backend/src/http/routes/: mod.rs
backend/src/http/routes/account/: mod.rs  new.rs  whoami.rs
backend/src/http/routes/delay/: error.rs  mod.rs
backend/src/http/routes/session/: login.rs  mod.rs  refresh.rs
backend/src/logic/: account.rs  mod.rs
backend/src/logic/account/: mod.rs
backend/src/logic/auth/: password.rs
backend/src/logic/session/: access.rs  jwt.rs  mod.rs  refresh.rs
backend/src/smtp/: mod.rs
chart/: Chart.yaml
chart/templates/: ingress.yaml
chart/templates/backend/: deployment.yaml  service.yaml
chart/templates/frontend/: deployment.yaml  service.yaml
frontend/: .babelrc  .eslintrc.json  .gitignore  .postcssrc  .proxyrc  .stylelintrc.json  Dockerfile  nginx.conf  package.json  tsconfig.json
frontend/src/: _mixins.scss  api.ts  global.d.ts  global.scss  hooks.ts  index.html  index.tsx
frontend/src/api/: index.ts
frontend/src/api/account/: create.ts  whoami.ts
frontend/src/api/session/: index.ts  login.ts  refresh.ts
frontend/src/components/forms/: index.ts
frontend/src/components/forms/button/: index.tsx  style.scss
frontend/src/components/forms/horizontalSteps/: index.tsx  style.scss
frontend/src/components/forms/iconButton/: index.tsx  style.scss
frontend/src/components/forms/searchBar/: index.tsx  style.scss
frontend/src/components/forms/select/: index.tsx  style.scss
frontend/src/components/forms/textInput/: index.tsx  style.scss
frontend/src/components/layout/: index.ts
frontend/src/components/layout/divider/: index.tsx  style.scss
frontend/src/components/layout/sidebar/: divider.tsx  index.tsx  link.tsx  style.scss
frontend/src/components/layout/subnav/: index.tsx  style.scss
frontend/src/components/layout/topbar/: index.tsx  style.scss
frontend/src/components/media/icon/: index.tsx  style.scss
frontend/src/components/theme/: index.tsx
frontend/src/database/: index.ts  settings.ts  table.ts
frontend/src/logic/: account.ts  index.ts  settings.ts
frontend/src/models/: account.ts  index.ts  session.ts
frontend/src/pages/app/: index.tsx  style.scss
frontend/src/pages/app/inbox/: index.tsx
frontend/src/pages/app/settings/: index.tsx
frontend/src/pages/app/settings/general/: index.tsx
frontend/src/pages/authenticate/: index.tsx  style.scss
frontend/src/pages/authenticate/login/: index.tsx  style.scss
frontend/src/pages/authenticate/register/: authStep.tsx  index.tsx  nameStep.tsx  style.scss
frontend/src/store/: index.ts
frontend/src/store/account/: index.ts  reducers.ts  thunks.ts
frontend/src/store/session/: index.ts  reducers.ts  thunks.ts
jsonresponder/: Cargo.toml  README.md
