[package]
name = "accounts-http"
version = "0.1.0"
authors = ["Nexium Team"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

accounts = { path = "../accounts" }
