[package]
name = "accounts"
version = "0.1.0"
authors = ["Nexium Team"]
edition = "2018"

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.26"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
env_logger = "0.9.0"

[build-dependencies]
tonic-build = "0.5"
