[package]
name = "nexium"
version = "0.1.0"
authors = ["Nexium Team"]
edition = "2018"

[features]
default = ["embedded-frontend"]
embedded-frontend = ["rust-embed"]

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.26"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
env_logger = "0.9.0"
postbus = "0.2.0"
async-trait = "0.1.51"
mailparse = "0.13.6"
sqlx = { version = "0.5.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "postgres",
    "uuid",
    "ipnetwork",
    "chrono",
] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
argon2 = { version = "0.3.1", features = ["std"] }
zxcvbn = "2.1.1"
ipnetwork = { version = "0.17.0" }
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.8.4"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
rust-embed = { version = "6.2.0", optional = true }
jsonresponder = "0.1.0"
