[package]
name = "nexium"
version = "0.2.0"
authors = ["Nexium Team"]
edition = "2021"
rust-version = "1.56"

[dependencies]
actix-web = "4.0.0-beta.10"
actix-redis = "0.10.0-beta.3"
actix-session = "0.5.0-beta.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.26"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
env_logger = "0.9.0"
postbus = "0.2.0"
async-trait = "0.1.51"
mailparse = "0.13.6"
mime_guess = "2.0.3"
sqlx = { version = "0.5.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "postgres",
    "uuid",
] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
argon2 = { version = "0.3.1", features = ["std"] }
zxcvbn = "2.1.1"
time = "0.2.23"
dotenv = "0.15.0"
rust-embed = { version = "6.2.0" }
regex = "1.5.4"
lazy_static = "1.4.0"
