[package]
name = "jsonresponder"
version = "0.1.0"
edition = "2018"
description = "JSON responder for errors macro for Rocket"
license = "MIT"
repository = "https://github.com/nexiumapp/nexium"
categories = ["web-programming", "encoding"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0.76"
quote = "1.0.9"
serde_json = "1.0.64"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
